--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="section-content">
             <article>
-                <h2>ANALISTA DE BACKUP</h2>
+                <h2><a href="http://www.hsbs.com.br">Especialista em Soluções de Backup/HSBS SOluções em Informatica</a></h2>
                 <p class="sub-details">
                     04/2018 - 12/2019
                 </p>
@@ -54,15 +54,7 @@
                 (Físico e Lógico) Gerenciar Backup de clientes (Manutenção, Resolução de Problemas e auditoria)</p>
             </article>
             <article>
-                <h2>ESTAGIÁRIO EM BACKUP</h2>
-                <p class="sub-details">
-                    09/2017 - 04/2018
-                </p>
-                <p>Implantar Veeam Backup & Replication e Clouberry Backup Implantar servidores de backup
-                (Físico e Lógico) Gerenciar Backup de clientes (Manutenção, Resolução de Problemas e auditoria)</p>
-            </article>
-            <article>
-                <h2>ESTAGIÁRIO EM MONITORAMENTO</h2>
+                <h2><a href="http://www.ati.pe.gov.br">Especialista em Monitoramento NOC/ATI-PE </h2>
                 <p class="sub-details">
                     08/2016 - 04/2017
                 </p>
@@ -71,7 +63,7 @@
                 integrados ao SQL Server, MYSQL e POSTGRESQL.</p>
             </article>
             <article>
-                <h2>ESTAGIÁRIO EM ENGENHARIA DE PRODUÇÃO</h2>
+                <h2><a href="http://www.petrobras.com.br">Especialista em Contratos - Petrobras</h2>
                 <p class="sub-details">
                     08/2016 - 04/2017
                 </p>
