--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 (Físico e Lógico) Gerenciar Backup de clientes (Manutenção, Resolução de Problemas e auditoria)</p>
             </article>
             <article>
-                <h2><a href="http://www.ati.pe.gov.br">Especialista em Monitoramento NOC/ATI-PE </h2>
+                <h2><a href="http://www.ati.pe.gov.br">Especialista em Monitoramento NOC/ATI-PE </a></h2>
                 <p class="sub-details">
                     08/2016 - 04/2017
                 </p>
@@ -63,7 +63,7 @@
                 integrados ao SQL Server, MYSQL e POSTGRESQL.</p>
             </article>
             <article>
-                <h2><a href="http://www.petrobras.com.br">Especialista em Contratos - Petrobras</h2>
+                <h2><a href="http://www.petrobras.com.br">Especialista em Contratos - Petrobras</a></h2>
                 <p class="sub-details">
                     08/2016 - 04/2017
                 </p>
