--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="section-content">
             <article>
-                <h2><a href="http://www.hsbs.com.br">Especialista em Soluções de Backup/HSBS SOluções em Informatica</a></h2>
+                <h2>Especialista em Soluções de Backup - <a href="http://www.hsbs.com.br">HSBS Soluções em Informatica</a></h2>
                 <p class="sub-details">
                     04/2018 - 12/2019
                 </p>
@@ -54,7 +54,7 @@
                 (Físico e Lógico) Gerenciar Backup de clientes (Manutenção, Resolução de Problemas e auditoria)</p>
             </article>
             <article>
-                <h2><a href="http://www.ati.pe.gov.br">Especialista em Monitoramento NOC/ATI-PE </a></h2>
+                <h2>Especialista em Monitoramento NOC - <a href="http://www.ati.pe.gov.br">ATI-PE </a></h2>
                 <p class="sub-details">
                     08/2016 - 04/2017
                 </p>
@@ -63,7 +63,7 @@
                 integrados ao SQL Server, MYSQL e POSTGRESQL.</p>
             </article>
             <article>
-                <h2><a href="http://www.petrobras.com.br">Especialista em Contratos - Petrobras</a></h2>
+                <h2>Especialista em Contratos - <a href="http://www.petrobras.com.br">Petrobras</a></h2>
                 <p class="sub-details">
                     08/2016 - 04/2017
                 </p>
