--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
     <main id="professional-details">
     <section>
         <div class="section-title">
+            <h1>Objetivo</h1>
+        </div>
+        <div class="section-content">
+            <p>Desenvolvedor Full Stack</p>
+        </div>
+    </section>
+    <section>
+        <div class="section-title">
             <h1>Perfil</h1>
         </div>
         <div class="section-content">
