--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             </div>
             <div id="name-title">
                 <h1>Cláudio Filipe Lima Rapôso</h1>
-                <h2>Desenvolvedor Fullstack MERN</h2>
+                <h2>Recife-PE</h2>
             </div>
             <div id="contact-details">
                 <ul>
                     <li><i class="fas fa-envelope-open-text"></i> - <a href="mailto:engcfraposo@gmail.com">engcfraposo@gmail.com</a></li>
-                    <li><i class="fab fa-linkedin"></i> - <a href="https://www.linkedin.com/in/cfraposo">Linkedin</a></li>
-                    <li><i class="fab fa-github-square"></i> - <a href="https://github.com/engcfraposo">GitHub</a></li>
+                    <li><i class="fab fa-linkedin"></i> - <a href="https://www.linkedin.com/in/cfraposo">https://www.linkedin.com/in/cfraposo</a></li>
+                    <li><i class="fab fa-github-square"></i> - <a href="https://github.com/engcfraposo">https://github.com/engcfraposo</a></li>
                     <li><i class="fas fa-phone-square-alt"></i> - +55 81 9 9887 2556</li>
                 </ul>
             </div>
@@ -33,7 +33,7 @@
             <h1>Objetivo</h1>
         </div>
         <div class="section-content">
-            <p>Desenvolvedor Full Stack</p>
+            <p>Desenvolvedor Full Stack, Frontend, Backend ou Mobile</p>
         </div>
     </section>
     <section>
@@ -41,11 +41,8 @@
             <h1>Perfil</h1>
         </div>
         <div class="section-content">
-            <p>O profissional têm experiência nas tecnologias JAVASCRIPT, TYPESCRIPT, CSS, HTML, e conhecimento nos frameworks:
-            Express, Mongodb, Node.js, React, React Native, Sequelize. Ele está ativo no mercado de trabalho 
-            há aproximadamente 6 anos. Já trabalhou nas empresas HSBS, ATI - Agência Estadual de Tecnologia 
-            da Informação / PE, Campus Party, Somai Tecnologia e Educação e possui 18 projetos publicados no 
-            GitHub.</p>
+            <p>Especialista  corporativo e estrategista de soluções, com experiência em desenvolvimento e melhoramento de projetos com Styled Component, React-Native-Maps, Leaflet.js, Socket.io, AsyncStorage, JWT e Bcrypt, Cors, Morgan, Banco não relacionais (MongoDb, RealmDB e Redis), Banco Relacionais (MySql, SQL Server, Oracle, Postgres), ORM’s (Mongoose, Sequelize e TypeORM) com microserviços (Docker e Kubenetes) e ferramentas de teste Jest e Enzyme. Com desenvolvimento de diversos ambientes em JavaScript e TypeScript.</p>
+            <p>Com excelente comunicação, capacidade para resolução de problemas, habilidades analíticas e de serviços do cliente. Trabalhar em conjunto e m busca do melhor para na empresa e o cliente, facilidade em aprimorar novas competências e com currículo baseado em gestão de projetos. Com experiência de 5 anos como especialista de infraestrutura de Cloud Backup e Monitoramento adquirindo acreditação técnica e em vendas em Veeam Backup Replication.</p>
         </div>
     </section>
     <section>
