--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
         </div>
         <div class="section-content">
             <article>
+                <h2>Especialista em Desenvolvimento React - <a href="http://www.softcom.com.br">Softcom Tecnologia</a></h2>
+                <p class="sub-details">
+                    06/2030 - atual
+                </p>
+                <p>Implantar Veeam Backup & Replication e Clouberry Backup Implantar servidores de backup
+                (Físico e Lógico) Gerenciar Backup de clientes (Manutenção, Resolução de Problemas e auditoria)</p>
+            </article>
+            <article>
                 <h2>Especialista em Soluções de Backup - <a href="http://www.hsbs.com.br">HSBS Soluções em Informatica</a></h2>
                 <p class="sub-details">
                     04/2018 - 12/2019
