--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                 <p class="sub-details">
                     06/2030 - atual
                 </p>
-                <p>Implantar Veeam Backup & Replication e Clouberry Backup Implantar servidores de backup
-                (Físico e Lógico) Gerenciar Backup de clientes (Manutenção, Resolução de Problemas e auditoria)</p>
+                <p>Desenvolvimento de funcionalidades em marketplace, correção de bug's, programação em typescript, inegração de api com redux.</p>
             </article>
             <article>
                 <h2>Especialista em Soluções de Backup - <a href="http://www.hsbs.com.br">HSBS Soluções em Informatica</a></h2>
