--- a/index.html
+++ b/index.html
@@ -51,7 +51,14 @@
         </div>
         <div class="section-content">
             <article>
-                <h2>Especialista em Desenvolvimento React - <a href="http://www.softcom.com.br">Softcom Tecnologia</a></h2>
+                <h2>Software Engineer - React/React Native/Node - <a href="https://www.accenture.com/br-pt">Accenture</a></h2>
+                <p class="sub-details">
+                    11/2021 - Atual
+                </p>
+                <p>Desenvolvimento de solução para Tim, Droga Raia e Drogasil de soluções em backend com gRPC, Rest, Graphql buscando ás melhores práticas em Clean Code, TDD e Typescript</p>
+            </article>
+            <article>
+                <h2>Software Engineer - React(Typescript) - <a href="http://www.softcom.com.br">Softcom Tecnologia</a></h2>
                 <p class="sub-details">
                     06/2020 - 08/2020
                 </p>
