--- a/index.html
+++ b/index.html
@@ -154,7 +154,22 @@
             </article>
            
         </div>
-    </section>                
+    </section>
+        <section>
+        <div class="section-title">
+            <h1>Habilidades Chave</h1>
+        </div>
+        <div class="section-content">
+            <ul class="key-skills">
+                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure Fundamentals</a></li>
+                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure Data Fundamentals</a></li>
+                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure AI Fundamentals</a></li>
+                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure Administrator Associate</a></li>
+                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure Developer Associate</a></li>
+                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure Devops Expert</a></li>
+            </ul>
+        </div>
+    </section>                  
     <section>
         <div class="section-title">
             <h1>Habilidades Chave</h1>
