--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
         </div>
         <div class="section-content">
             <ul class="key-skills">
-                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure Fundamentals</a></li>
-                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure Data Fundamentals</a></li>
-                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure AI Fundamentals</a></li>
-                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure Administrator Associate</a></li>
-                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure Developer Associate</a></li>
-                <li><a href="https://github.com/engcfraposo/nlw-booster">Microsoft Certified Azure Devops Expert</a></li>
+                <li><h2>Microsoft Certified Azure Fundamentals</h2></li>
+                <li><h2>Microsoft Certified Azure Data Fundamentals</h2></li>
+                <li><h2>Microsoft Certified Azure AI Fundamentals</h2></li>
+                <li><h2>Microsoft Certified Azure Administrator Associate</h2></li>
+                <li><h2>Microsoft Certified Azure Developer Associate</h2></li>
+                <li><h2>Microsoft Certified Azure Devops Expert</h2></li>
             </ul>
         </div>
     </section>                  
