--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
         </div>
         <div class="section-content">
             <ul class="key-skills">
-                <li><h2>Microsoft Certified Azure Fundamentals</h2></li>
-                <li><h2>Microsoft Certified Azure Data Fundamentals</h2></li>
-                <li><h2>Microsoft Certified Azure AI Fundamentals</h2></li>
-                <li><h2>Microsoft Certified Azure Administrator Associate</h2></li>
-                <li><h2>Microsoft Certified Azure Developer Associate</h2></li>
-                <li><h2>Microsoft Certified Azure Devops Expert</h2></li>
+                <li><p>Microsoft Certified Azure Fundamentals</p></li>
+                <li><p>Microsoft Certified Azure Data Fundamentals</p></li>
+                <li><p>Microsoft Certified Azure AI Fundamentals</p></li>
+                <li><p>Microsoft Certified Azure Administrator Associate</p></li>
+                <li><p>Microsoft Certified Azure Developer Associate</p></li>
+                <li><p>Microsoft Certified Azure Devops Expert</p></li>
             </ul>
         </div>
     </section>                  
