--- a/index.html
+++ b/index.html
@@ -157,16 +157,21 @@
     </section>
         <section>
         <div class="section-title">
-            <h1>Habilidades Chave</h1>
+            <h1>Certificações</h1>
         </div>
         <div class="section-content">
             <ul class="key-skills">
+                <li><p>Microsoft Certified Trainer - 2021/2022</p></li>
                 <li><p>Microsoft Certified Azure Fundamentals</p></li>
                 <li><p>Microsoft Certified Azure Data Fundamentals</p></li>
                 <li><p>Microsoft Certified Azure AI Fundamentals</p></li>
+                <li><p>Microsoft Certified Security, Compliance, and Identity Fundamentals</p></li>
+                <li><p>Microsoft Certified Azure Virtual Desktop Specialty</p></li>
                 <li><p>Microsoft Certified Azure Administrator Associate</p></li>
                 <li><p>Microsoft Certified Azure Developer Associate</p></li>
                 <li><p>Microsoft Certified Azure Devops Expert</p></li>
+                <li><p>AWS Certified Cloud Practioner</p></li>
+                <li><p>AWS Certified Developer</p></li> 
             </ul>
         </div>
     </section>                  
