--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
-    <title>Cláudio Rapôso - Desenvolvedor Fullstack MERN</title>
+    <title>Cláudio Rapôso - Tech Lead</title>
 </head>
 <body>
     <div id="cv">
@@ -33,7 +33,7 @@
             <h1>Objetivo</h1>
         </div>
         <div class="section-content">
-            <p>Desenvolvedor Full Stack, Frontend, Backend ou Mobile</p>
+            <p>Ministrar treinamentos com MCT - Microsoft Certified Trainer na área de Desenvolvimento</p>
         </div>
     </section>
     <section>
