--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                 <p class="sub-details">
                     11/2021 - Atual
                 </p>
-                <p>Desenvolvimento de solução para Tim, Droga Raia e Drogasil de soluções em backend com gRPC, Rest, Graphql buscando ás melhores práticas em Clean Code, TDD e Typescript</p>
+                <p>Desenvolvimento de solução para Tim, Droga Raia e Drogasil de soluções em backend com gRPC, Rest, Graphql, DocumentDB, Eslaticache, Ec2, S3, Eks, Menssageria, SNS, SQS e AWS Functions e  buscando ás melhores práticas em Clean Code, TDD e Typescript</p>
             </article>
             <article>
                 <h2>Software Engineer - React(Typescript) - <a href="http://www.softcom.com.br">Softcom Tecnologia</a></h2>
                 <p class="sub-details">
                     06/2020 - 08/2020
                 </p>
-                <p>Desenvolvimento de funcionalidades em marketplace, correção de bug's, programação em typescript, inegração de api com redux.</p>
+                <p>Desenvolvimento de funcionalidades em marketplace, correção de bug's, programação em typescript, graphql, next.js e integração de api com redux.</p>
             </article>
             <article>
                 <h2>Especialista em Soluções de Backup - <a href="http://www.hsbs.com.br">HSBS Soluções em Informatica</a></h2>
@@ -70,7 +70,7 @@
                     04/2018 - 12/2019
                 </p>
                 <p>Implantar Veeam Backup & Replication e Clouberry Backup Implantar servidores de backup
-                (Físico e Lógico) Gerenciar Backup de clientes (Manutenção, Resolução de Problemas e auditoria)</p>
+                (Físico e Lógico) Gerenciar Backup de clientes (Manutenção, Resolução de Problemas e auditoria) e desenvolvimento de aplicativo de gestão de backup com NodeJs</p>
             </article>
             <article>
                 <h2>Especialista em Monitoramento NOC - <a href="http://www.ati.pe.gov.br">ATI-PE </a></h2>
