--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1>Objetivo</h1>
         </div>
         <div class="section-content">
-            <p>Ministrar treinamentos com MCT - Microsoft Certified Trainer na área de Desenvolvimento</p>
+            <p>Tech Lead em ReactJS, React Native e NodeJS</p>
         </div>
     </section>
     <section>
