--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h1>Objetivo</h1>
         </div>
         <div class="section-content">
-            <p>Tech Lead em ReactJS, React Native e NodeJS</p>
+            <p>Tech Lead e (ou) Desenvolvedor Senior em ReactJS, React Native e NodeJS</p>
         </div>
     </section>
     <section>
@@ -55,7 +55,7 @@
                 <p class="sub-details">
                     11/2021 - Atual
                 </p>
-                <p>Desenvolvimento de solução para Tim, Droga Raia e Drogasil de soluções em backend com gRPC, Rest, Graphql, DocumentDB, Eslaticache, Ec2, S3, Eks, Menssageria, SNS, SQS e AWS Functions e  buscando ás melhores práticas em Clean Code, TDD e Typescript</p>
+                <p>Desenvolvimento de solução para diversos clientes através do backend com gRPC, Rest, Graphql, DocumentDB, Eslaticache, Ec2, S3, Eks, Menssageria, SNS, SQS e AWS Functions e  buscando ás melhores práticas em Clean Code, TDD e Typescript</p>
             </article>
             <article>
                 <h2>Software Engineer - React(Typescript) - <a href="http://www.softcom.com.br">Softcom Tecnologia</a></h2>
