--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p class="sub-details">
                     11/2021 - Atual
                 </p>
-                <p>Desenvolvimento de solução para diversos clientes através do backend com gRPC, Rest, Graphql, DocumentDB, Eslaticache, Ec2, S3, Eks, Menssageria, SNS, SQS e AWS Functions e  buscando ás melhores práticas em Clean Code, TDD e Typescript</p>
+                <p>Desenvolvimento de solução para diversos clientes através do backend com Azure e AWS buscando ás melhores práticas em Clean Code, TDD e Typescript</p>
             </article>
             <article>
                 <h2>Software Engineer - React(Typescript) - <a href="http://www.softcom.com.br">Softcom Tecnologia</a></h2>
@@ -69,7 +69,7 @@
                     04/2018 - 12/2019
                 </p>
                 <p>Implantar Veeam Backup & Replication e Clouberry Backup Implantar servidores de backup
-                (Físico e Lógico) Gerenciar Backup de clientes (Manutenção, Resolução de Problemas e auditoria) e desenvolvimento de aplicativo de gestão de backup com NodeJs</p>
+                (Físico e Lógico) para o Azure. Gerenciar Backup de clientes (Manutenção, Resolução de Problemas e auditoria) e desenvolvimento de aplicativo de gestão de backup com NodeJs</p>
             </article>
             <article>
                 <h2>Especialista em Monitoramento NOC - <a href="http://www.ati.pe.gov.br">ATI-PE </a></h2>
